# TUFF-RADICAL

./: .gitignore  AGENTS.md  COMMERCIAL_LICENSE.md  HANDOFF.md  README.md  ROADMAP.md  overhaul_docs.py  remote_diag.py  remote_repair.py  tuff-build-usb.sh  tuff-radical-commander.skill
TUFF-RADICAL-KERNEL/: Cargo.toml  ROADMAP.md  run_qemu.sh  rust-toolchain.toml
TUFF-RADICAL-KERNEL/.cargo/: config.toml
TUFF-RADICAL-KERNEL/src/: allocator.rs  apic.rs  cpu.rs  gdt.rs  gpu.rs  installer.rs  interrupts.rs  main.rs  memory.rs  paging.rs  pci.rs  serial.rs  virtio_blk.rs  zram.rs
TUFF-RADICAL-KERNEL/src/arch/x86_64/: apic.rs  cpu.rs  gdt.rs  interrupts.rs  mod.rs  paging.rs  registers.rs  syscall.rs  user.rs
TUFF-RADICAL-KERNEL/src/compression/: mod.rs  snappy.rs  zram.rs
TUFF-RADICAL-KERNEL/src/drivers/: block.rs  gpu.rs  io.rs  mod.rs  pci.rs  serial.rs  virtio_blk.rs  virtio_gpu.rs
TUFF-RADICAL-KERNEL/src/mm/: memory.rs  mod.rs
TUFF-RADICAL-KERNEL/src/task/: executor.rs  mod.rs  telemetry.rs
projects/tuff-linux-distro/overlay/boot/: tuff-radical-kernel.efi
projects/tuff-linux-distro/overlay/etc/: environment  issue  motd
projects/tuff-linux-distro/overlay/etc/default/: tuff-release  zramswap
projects/tuff-linux-distro/overlay/etc/profile.d/: tuff-vulkan.sh
projects/tuff-linux-distro/overlay/etc/skel/: .profile
projects/tuff-linux-distro/tests/boot/: qemu-smoke-test.sh
projects/tuff-linux-distro/tests/install/: qemu-live-smoke-test.sh
projects/tuff-linux-distro/tools/tuff-distro-tools/: Cargo.toml
skills/: SKILL.md
(+27 files in other folders)
