[package]
name = "tuff-radical-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
uefi = "0.24"
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
linked_list_allocator = "0.10"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
lz4_flex = { version = "0.11", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
incremental = false
debug = false
